--- a/index.html
+++ b/index.html
@@ -1536,11 +1536,9 @@
     <div class="mobile-menu-social">
       <h4>Connect With Me</h4>
       <div class="mobile-social-links">
-        <a href="#" class="mobile-social-link"><i class="fab fa-github"></i></a>
-        <a href="#" class="mobile-social-link"><i class="fab fa-linkedin-in"></i></a>
-        <a href="#" class="mobile-social-link"><i class="fab fa-twitter"></i></a>
-        <a href="#" class="mobile-social-link"><i class="fab fa-instagram"></i></a>
-        <a href="#" class="mobile-social-link"><i class="fab fa-whatsapp"></i></a>
+        <a href="https://github.com/luthzzzz" class="mobile-social-link"><i class="fab fa-github"></i></a>
+        <a href="https://Instagram.com/@alz.luthzz" class="mobile-social-link"><i class="fab fa-instagram"></i></a>
+        <a href="https://wa.me/6285819544329" class="mobile-social-link"><i class="fab fa-whatsapp"></i></a>
       </div>
     </div>
     <div class="mobile-menu-footer">
