--- a/index.html
+++ b/index.html
@@ -1776,7 +1776,7 @@
           </div>
           <div class="project-info">
             <h3>E-Commerce Platform</h3>
-            <p>Modern online store with payment gateway integration, product management, and responsive design.</p>
+            <p>Platform e-commerce lengkap dengan integrasi pembayaran yang aman, manajemen inventaris, dan antarmuka yang ramah pengguna.</p>
             <span class="project-category">Web Development</span>
           </div>
         </div>
@@ -1792,7 +1792,7 @@
           </div>
           <div class="project-info">
             <h3>WhatsApp Customer Service Bot</h3>
-            <p>AI-powered WhatsApp bot for automated customer support, product inquiries, and order tracking.</p>
+            <p>Custom Bot whatsapp, telegram, discord sesuai dengan kebutuhan pribadi. atau untuk jualan dengan sistem full otomatis payment gateway.</p>
             <span class="project-category">WhatsApp Bot</span>
           </div>
         </div>
@@ -1807,8 +1807,8 @@
             </div>
           </div>
           <div class="project-info">
-            <h3>Fashion Store</h3>
-            <p>Complete e-commerce solution for fashion retail with inventory management and multi-payment options.</p>
+            <h3>Mapping GTA SA:MP</h3>
+            <p>Membuat mapping (bangunan) untuk server ataupun pribadi. dengan budget yang pas dan dijamin puas dengan hasil.</p>
             <span class="project-category">E-Commerce</span>
           </div>
         </div>
@@ -1824,7 +1824,7 @@
           </div>
           <div class="project-info">
             <h3>Portfolio Website</h3>
-            <p>Creative portfolio website with smooth animations, dark mode, and modern design principles.</p>
+            <p>Membuat Web Fortofolio untuk pribadi. bisa sesuai request dari kalian dan tentukan tema Fortofolio.</p>
             <span class="project-category">Web Development</span>
           </div>
         </div>
