--- a/index.html
+++ b/index.html
@@ -1761,6 +1761,7 @@
           <button class="filter-btn" data-filter="web">Web Development</button>
           <button class="filter-btn" data-filter="bot">WhatsApp Bot</button>
           <button class="filter-btn" data-filter="ecommerce">E-Commerce</button>
+          <button class="filter-btn" data-filter="GTA SA:MP">SA:MP</button>
         </div>
       </div>
       <div class="projects-grid">
@@ -1809,7 +1810,7 @@
           <div class="project-info">
             <h3>Mapping GTA SA:MP</h3>
             <p>Membuat mapping (bangunan) untuk server ataupun pribadi. dengan budget yang pas dan dijamin puas dengan hasil.</p>
-            <span class="project-category">E-Commerce</span>
+            <span class="project-category">SA:MP</span>
           </div>
         </div>
         <!-- Project 4 -->
