--- a/index.html
+++ b/index.html
@@ -1761,7 +1761,7 @@
           <button class="filter-btn" data-filter="web">Web Development</button>
           <button class="filter-btn" data-filter="bot">WhatsApp Bot</button>
           <button class="filter-btn" data-filter="ecommerce">E-Commerce</button>
-          <button class="filter-btn" data-filter="GTA SA:MP">SA:MP</button>
+          <button class="filter-btn" data-filter="SA:MP">GTA SA:MP</button>
         </div>
       </div>
       <div class="projects-grid">
