--- a/index.html
+++ b/index.html
@@ -1798,7 +1798,7 @@
           </div>
         </div>
         <!-- Project 3 -->
-        <div class="project-card" data-category="ecommerce">
+        <div class="project-card" data-category="samp">
           <div class="project-image">
             <div style="width: 100%; height: 100%; background: linear-gradient(135deg, #4facfe 0%, #00f2fe 100%);"></div>
             <div class="project-overlay">
