--- a/index.html
+++ b/index.html
@@ -1455,10 +1455,6 @@
 </head>
 <body>
 
-  <!-- Custom Cursor -->
-  <div class="cursor"></div>
-  <div class="cursor-follower"></div>
-
   <!-- Header -->
   <header id="header">
     <div class="container nav-container">
@@ -1529,10 +1525,6 @@
         </a>
       </div>
     </div>
-    <div class="mobile-menu-divider"></div>
-    <button class="mobile-menu-cta">
-      <i class="fas fa-paper-plane"></i> Get In Touch
-    </button>
     <div class="mobile-menu-social">
       <h4>Connect With Me</h4>
       <div class="mobile-social-links">
@@ -1581,8 +1573,8 @@
           </div>
         </div>
         <div class="about-content">
-          <h3>Digital Product High Quality</h3>
-          <p>Hello, saya Luthfi Andero. kalian bisa panggil saya Luthfi. saya masih duduk di bangku smk. jurusan saya adalah Teknik Komputer dan Jaringan. kalian pasti akan bingung disini hihi. Jurusan saya TKJ namun saya tidak begitu memahami nya.</p>
+          <h3>Halo semuanya.</h3>
+          <p>saya Luthfi Andero. kalian bisa panggil saya Luthfi. saya masih duduk di bangku smk. jurusan saya adalah Teknik Komputer dan Jaringan. kalian pasti akan bingung disini hihi. Jurusan saya TKJ namun saya tidak begitu memahami nya.</p>
           <p>Saya mengenal dunia Digital saat saya masih duduk di bangku SD kelas 6, berawal dari panel SMM atau yang kalian kenal biasanya Suntik Sosmed. itu awal saya mengembangkan produk saya. dan saya puas kaarena hasilnya besar. dan saya naik pada tingkat SMP saya mulai ingin tau lebih tentang Digital.</p>
           <p>Pada saat SMP saya mulai Mengembangkan rasa ingin tau saya dalam dunia pemrograman. disitu sayaa awal belajar Web Design, lalu berlanjut Web Development, Dan berlanjut lagi menjadi Developer GTA SAMP. saya mendirikan server SAMP yang sampai sekarang masih aktif dan cukup ramai.</p>
           <div class="about-stats">
@@ -1741,8 +1733,8 @@
           <div class="service-icon">
             <i class="fas fa-cogs"></i>
           </div>
-          <h3>API Integration</h3>
-          <p>Integrasi API dan layanan pihak ketiga yang mulus untuk memperluas fungsionalitas dan menghubungkan sistem Anda.</p>
+          <h3>SAMP DEVELOPER</h3>
+          <p>Melayani pembuatan jasa server GTA SA:MP MULTIPLAYER.</p>
         </div>
       </div>
     </div>
@@ -1760,7 +1752,6 @@
           <button class="filter-btn active" data-filter="all">All</button>
           <button class="filter-btn" data-filter="web">Web Development</button>
           <button class="filter-btn" data-filter="bot">WhatsApp Bot</button>
-          <button class="filter-btn" data-filter="ecommerce">E-Commerce</button>
           <button class="filter-btn" data-filter="samp">GTA SA:MP</button>
         </div>
       </div>
@@ -1768,7 +1759,7 @@
         <!-- Project 1 -->
         <div class="project-card" data-category="web">
           <div class="project-image">
-            <div style="width: 100%; height: 100%; background: linear-gradient(135deg, #667eea 0%, #764ba2 100%);"></div>
+            <img src="https://i.ibb.co.com/HDNHjfNm/images.jpg" alt="Project Image" style="width: 100%; height: 100%; object-fit: cover;">
             <div class="project-overlay">
               <div class="project-links">
                 <a href="https://wa.me/6285819544329"><i class="fas fa-external-link-alt"></i></a>
@@ -1784,7 +1775,7 @@
         <!-- Project 2 -->
         <div class="project-card" data-category="bot">
           <div class="project-image">
-            <div style="width: 100%; height: 100%; background: linear-gradient(135deg, #f093fb 0%, #f5576c 100%);"></div>
+            <img src="https://i.ibb.co.com/wDzSCT8/1770904410743.jpg" alt="Project Image" style="width: 100%; height: 100%; object-fit: cover;">
             <div class="project-overlay">
               <div class="project-links">
                 <a href="https://wa.me/6285819544329"><i class="fas fa-external-link-alt"></i></a>
@@ -1797,10 +1788,10 @@
             <span class="project-category">WhatsApp Bot</span>
           </div>
         </div>
-        <!-- Project 3 -->
+        <!-- MAPPING SAMP -->
         <div class="project-card" data-category="samp">
           <div class="project-image">
-            <div style="width: 100%; height: 100%; background: linear-gradient(135deg, #4facfe 0%, #00f2fe 100%);"></div>
+            <img src="https://i.ibb.co.com/YYCXStD/promosi-ke-2.jpg " alt="Project Image" style="width: 100%; height: 100%; object-fit: cover;">
             <div class="project-overlay">
               <div class="project-links">
                 <a href="https://wa.me/6285819544329"><i class="fas fa-external-link-alt"></i></a>
@@ -1813,10 +1804,25 @@
             <span class="project-category">samp</span>
           </div>
         </div>
+		<div class="project-card" data-category="samp">
+          <div class="project-image">
+            <img src="https://i.ibb.co.com/0RF5pYLZ/20131107092815710-1014x650.jpg" alt="Project Image" style="width: 100%; height: 100%; object-fit: cover;">
+            <div class="project-overlay">
+              <div class="project-links">
+                <a href="https://wa.me/6285819544329"><i class="fas fa-external-link-alt"></i></a>
+              </div>
+            </div>
+          </div>
+        <div class="project-info">
+            <h3>JASA ON SERVER</h3>
+            <p>Jasa on server SAMP free set admin dan rename server full.</p>
+            <span class="project-category">samp</span>
+          </div>
+        </div>
         <!-- Project 4 -->
         <div class="project-card" data-category="web">
           <div class="project-image">
-            <div style="width: 100%; height: 100%; background: linear-gradient(135deg, #fa709a 0%, #fee140 100%);"></div>
+            <img src="https://i.ibb.co.com/zVstWGGF/20260212-212710.jpg" alt="Project Image" style="width: 100%; height: 100%; object-fit: cover;">
             <div class="project-overlay">
               <div class="project-links">
                 <a href="https://wa.me/6285819544329"><i class="fas fa-external-link-alt"></i></a>
@@ -1927,29 +1933,6 @@
             </div>
           </div>
         </div>
-        <div class="contact-form">
-          <form id="contactForm">
-            <div class="form-group">
-              <label for="name">Your Name</label>
-              <label id="name" class="form-control" placeholder="Enter your name" required>
-            </div>
-            <div class="form-group">
-              <label for="email">Your Email</label>
-              <label id="email" class="form-control" placeholder="Enter your email" required>
-            </div>
-            <div class="form-group">
-              <label for="subject">Subject</label>
-              <label id="subject" class="form-control" placeholder="What's this about?" required>
-            </div>
-            <div class="form-group">
-              <label for="message">Message</label>
-              <label class="form-control" placeholder="Write your message here..." required></textarea>
-            </div>
-            <button type="submit" class="btn btn-primary" style="width: 100%; padding: 15px;">Send Message</button>
-          </form>
-        </div>
-      </div>
-    </div>
   </section>
 
   <!-- Footer -->
@@ -1975,16 +1958,6 @@
             <li><a href="#contact"><i class="fas fa-chevron-right"></i> Contact</a></li>
           </ul>
         </div>
-        <div class="footer-col">
-          <h3>Services</h3>
-          <ul class="footer-links">
-            <li><a href="#"><i class="fas fa-chevron-right"></i> Web Development</a></li>
-            <li><a href="#"><i class="fas fa-chevron-right"></i> WhatsApp Bot</a></li>
-            <li><a href="#"><i class="fas fa-chevron-right"></i> E-Commerce</a></li>
-            <li><a href="#"><i class="fas fa-chevron-right"></i> UI/UX Design</a></li>
-            <li><a href="#"><i class="fas fa-chevron-right"></i> API Integration</a></li>
-          </ul>
-        </div>
       <div class="copyright">
         <p>&copy; Luthz Digital | Designed & Developed️</p>
       </div>
@@ -1997,20 +1970,7 @@
   </div>
 
   <script>
-    // Custom Cursor
-    const cursor = document.querySelector('.cursor');
-    const cursorFollower = document.querySelector('.cursor-follower');
-
-    document.addEventListener('mousemove', (e) => {
-      cursor.style.left = e.clientX + 'px';
-      cursor.style.top = e.clientY + 'px';
-      
-      setTimeout(() => {
-        cursorFollower.style.left = e.clientX + 'px';
-        cursorFollower.style.top = e.clientY + 'px';
-      }, 50);
-    });
-
+   
     document.querySelectorAll('a, button, .btn, .project-card, .service-card, .testimonial-card').forEach(elem => {
       elem.addEventListener('mouseenter', () => {
         cursor.style.transform = 'translate(-50%, -50%) scale(2)';
