--- a/index.html
+++ b/index.html
@@ -1529,7 +1529,7 @@
       <h4>Connect With Me</h4>
       <div class="mobile-social-links">
         <a href="https://github.com/luthzzzz" class="mobile-social-link"><i class="fab fa-github"></i></a>
-        <a href="https://Instagram.com/@alz.luthzz" class="mobile-social-link"><i class="fab fa-instagram"></i></a>
+        <a href="https://www.instagram.com/alz.luthzz?igsh=aHNneHRyMzMzc2U0" class="mobile-social-link"><i class="fab fa-instagram"></i></a>
         <a href="https://wa.me/6285819544329" class="mobile-social-link"><i class="fab fa-whatsapp"></i></a>
       </div>
     </div>
